# fastapi-practice

./: .pre-commit-config.yaml  main.py  pyproject.toml
scripts/: radon_check.sh
